# adp-paths

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff.toml
docs/: ci-build.mermaid  dispatch-work.mermaid  pr-review.mermaid  validate-change.mermaid
grafana/: README.md  docker-compose.yml  prometheus.yml
grafana/dashboards/: adp-dashboard.json
grafana/provisioning/dashboards/: default.yml
sample/src/: handler.py  utils.py
src/: __main__.py  cli.py  governance.py  harness.py  layers.py  metrics_server.py  observability.py  tools.py
src/adp_paths.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/paths/: ci_build.py  dispatch_work.py  pr_review.py  validate_change.py
tests/: test_governance.py  test_harness.py  test_metrics_server.py  test_observability.py  test_paths.py  test_tools.py
